# pratiche-pareri

./: .djlintrc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_DEPLOYMENT_IIS,md  README_DEPLOYMENT_IIS.md  collect_staticfiles.ps1  config_permissions.ps1  create_application_pool.ps1  create_web_app_iis.ps1  docker-compose.yml  env_template  initial_data.json  last_dump_time.json  manage.prod.py  manage.py  manage.stage.py  package.json  pnpm-lock.yaml  pratiche_pareri_log  pyproject.toml  requirements.txt  server.py  setup_log.ps1  test_django_settings.ps1  waitress_server.py  web.config
.github/workflows/: pre-commit-ci.yml
core/: views.py
datoriLavoro/: admin.py  apps.py  forms.py  models.py
datoriLavoro/migrations/: 0001_initial.py  0002_alter_sede_options.py  0002_initial.py  0003_alter_sede_citta.py  0003_datorelavoro_campo_temporaneo.py  0004_alter_sede_citta.py  0004_remove_datorelavoro_campo_temporaneo.py  0005_datorelavoro.py  0006_alter_sede_citta_alter_sede_nome.py  0007_alter_sede_indirizzo.py  0008_alter_datorelavoro_p_iva.py  0009_alter_datorelavoro_p_iva.py  (+1 more)
deployment/: avvio_iis.ps1  config_log_files.ps1  config_permissions.ps1  create_application_pool.ps1  create_web_app_iis.ps1  migrate_example.ps1  setup_repo.ps1  test_avvio_web_app.ps1
pareri/: admin.py  apps.py  models.py
pratiche/: admin.py  asgi.py  context_processors.py  settings.py  urls.py  wsgi.prod.py  wsgi.py  wsgi.stage.py
templates/: 404.html  500.html
users/: admin.py  apps.py  forms.py  models.py
utils/: logging.py  model.py
(+50 files in other folders)
